--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BACKEND_URL = http://localhost:8000/
-NEXT_PUBLIC_BACKEND_URL= http://localhost:8000
+BACKEND_URL = https://tallerbackend-production.up.railway.app
+NEXT_PUBLIC_BACKEND_URL= https://tallerbackend-production.up.railway.app/
