--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BACKEND_URL = https://tallerbackend-production.up.railway.app
-NEXT_PUBLIC_BACKEND_URL= https://tallerbackend-production.up.railway.app/
+BACKEND_URL = tallerbackend-production.up.railway.app/
+NEXT_PUBLIC_BACKEND_URL= tallerbackend-production.up.railway.app
